--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,29 @@
 				<artifactId>versions-maven-plugin</artifactId>
 				<version>2.7</version>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+    				<artifactId>maven-enforcer-plugin</artifactId>
+    				<version>3.0.0-M2</version>
+				<executions>
+    					<execution>
+        					<id>enforce</id>
+        					<goals>
+            						<goal>enforce</goal>
+        					</goals>
+        					<configuration>
+            						<rules>
+                						<requireMavenVersion>
+    									<version>[3.1)</version>
+								</requireMavenVersion>
+								<requireJavaVersion>
+    									<version>[1.8)</version>
+								</requireJavaVersion>
+            						</rules>
+        					</configuration>
+    					</execution>
+				</executions>
+			</plugin>
 		</plugins>	
 		<finalName>ArbitrageLocatorWebApp</finalName>
 	</build>
