--- a/pom.xml
+++ b/pom.xml
@@ -93,10 +93,10 @@
         					<configuration>
             						<rules>
                 						<requireMavenVersion>
-    									<version>[3.1)</version>
+    									<version>3.1</version>
 								</requireMavenVersion>
 								<requireJavaVersion>
-    									<version>[1.8)</version>
+    									<version>1.8</version>
 								</requireJavaVersion>
             						</rules>
         					</configuration>
